Project

General

Profile

Actions

Bug #23238

closed

master no longer builds on s390x

Added by Nathan Cutler about 6 years ago. Updated about 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Build of recent master fail on s390x. This is a regression. Presumably the regression was introduced by recent refactoring - possibly 46de629c3d0bfae5eba3f6b810808938b5a9af1f

The failure manifests itself in the s390x build log like so:

[  593s] [ 12%] Building CXX object src/CMakeFiles/crush_objs.dir/crush/CrushWrapper.cc.o
[  599s] In file included from /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/crush/CrushWrapper.cc:4:0:
[  599s] /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/osd/osd_types.h: In member function 'void eversion_t::encode(ceph::bufferlist&) const':
[  599s] /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/osd/osd_types.h:839:23: error: no matching function for call to 'eversion_t::encode(const version_t&, ceph::bufferlist&) const'
[  599s]      encode(version, bl);
[  599s]                        ^
[  599s] /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/osd/osd_types.h:835:8: note: candidate: void eversion_t::encode(ceph::bufferlist&) const
[  599s]    void encode(bufferlist &bl) const {
[  599s]         ^~~~~~
[  599s] /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/osd/osd_types.h:835:8: note:   candidate expects 1 argument, 2 provided
[  599s] /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/osd/osd_types.h:840:21: error: no matching function for call to 'eversion_t::encode(const epoch_t&, ceph::bufferlist&) const'
[  599s]      encode(epoch, bl);
[  599s]                      ^
[  599s] /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/osd/osd_types.h:835:8: note: candidate: void eversion_t::encode(ceph::bufferlist&) const
[  599s]    void encode(bufferlist &bl) const {
[  599s]         ^~~~~~
[  599s] /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/osd/osd_types.h:835:8: note:   candidate expects 1 argument, 2 provided
[  599s] /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/osd/osd_types.h: In member function 'void eversion_t::decode(ceph::buffer::list::iterator&)':
[  599s] /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/osd/osd_types.h:847:23: error: no matching function for call to 'eversion_t::decode(version_t&, ceph::buffer::list::iterator&)'
[  599s]      decode(version, bl);
[  599s]                        ^
[  599s] /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/osd/osd_types.h:843:8: note: candidate: void eversion_t::decode(ceph::buffer::list::iterator&)
[  599s]    void decode(bufferlist::iterator &bl) {
[  599s]         ^~~~~~
[  599s] /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/osd/osd_types.h:843:8: note:   candidate expects 1 argument, 2 provided
[  599s] /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/osd/osd_types.h:851:8: note: candidate: void eversion_t::decode(ceph::bufferlist&)
[  599s]    void decode(bufferlist& bl) {
[  599s]         ^~~~~~
[  599s] /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/osd/osd_types.h:851:8: note:   candidate expects 1 argument, 2 provided
[  599s] /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/osd/osd_types.h:848:21: error: no matching function for call to 'eversion_t::decode(epoch_t&, ceph::buffer::list::iterator&)'
[  599s]      decode(epoch, bl);
[  599s]                      ^
[  599s] /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/osd/osd_types.h:843:8: note: candidate: void eversion_t::decode(ceph::buffer::list::iterator&)
[  599s]    void decode(bufferlist::iterator &bl) {
[  599s]         ^~~~~~
[  599s] /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/osd/osd_types.h:843:8: note:   candidate expects 1 argument, 2 provided
[  599s] /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/osd/osd_types.h:851:8: note: candidate: void eversion_t::decode(ceph::bufferlist&)
[  599s]    void decode(bufferlist& bl) {
[  599s]         ^~~~~~
[  599s] /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/osd/osd_types.h:851:8: note:   candidate expects 1 argument, 2 provided
[  599s] In file included from /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/osd/OSDMap.h:28:0,
[  599s]                  from /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/mon/Session.h:23,
[  599s]                  from /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/messages/PaxosServiceMessage.h:5,
[  599s]                  from /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/messages/MLog.h:19,
[  599s]                  from /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/common/LogClient.cc:17:
[  599s] /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/osd/osd_types.h: In member function 'void eversion_t::encode(ceph::bufferlist&) const':
[  599s] /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/osd/osd_types.h:839:23: error: no matching function for call to 'eversion_t::encode(const version_t&, ceph::bufferlist&) const'
[  599s]      encode(version, bl);
[  599s]                        ^
[  599s] /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/osd/osd_types.h:835:8: note: candidate: void eversion_t::encode(ceph::bufferlist&) const
[  599s]    void encode(bufferlist &bl) const {
[  599s]         ^~~~~~
[  599s] /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/osd/osd_types.h:835:8: note:   candidate expects 1 argument, 2 provided
[  599s] /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/osd/osd_types.h:840:21: error: no matching function for call to 'eversion_t::encode(const epoch_t&, ceph::bufferlist&) const'
[  599s]      encode(epoch, bl);
[  599s]                      ^
[  599s] /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/osd/osd_types.h:835:8: note: candidate: void eversion_t::encode(ceph::bufferlist&) const
[  599s]    void encode(bufferlist &bl) const {
[  599s]         ^~~~~~
[  599s] /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/osd/osd_types.h:835:8: note:   candidate expects 1 argument, 2 provided
[  599s] /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/osd/osd_types.h: In member function 'void eversion_t::decode(ceph::buffer::list::iterator&)':
[  599s] /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/osd/osd_types.h:847:23: error: no matching function for call to 'eversion_t::decode(version_t&, ceph::buffer::list::iterator&)'
[  599s]      decode(version, bl);
[  599s]                        ^
[  599s] /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/osd/osd_types.h:843:8: note: candidate: void eversion_t::decode(ceph::buffer::list::iterator&)
[  599s]    void decode(bufferlist::iterator &bl) {
[  599s]         ^~~~~~
[  599s] /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/osd/osd_types.h:843:8: note:   candidate expects 1 argument, 2 provided
[  599s] /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/osd/osd_types.h:851:8: note: candidate: void eversion_t::decode(ceph::bufferlist&)
[  599s]    void decode(bufferlist& bl) {
[  599s]         ^~~~~~
[  599s] /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/osd/osd_types.h:851:8: note:   candidate expects 1 argument, 2 provided
[  599s] /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/osd/osd_types.h:848:21: error: no matching function for call to 'eversion_t::decode(epoch_t&, ceph::buffer::list::iterator&)'
[  599s]      decode(epoch, bl);
[  599s]                      ^
[  599s] /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/osd/osd_types.h:843:8: note: candidate: void eversion_t::decode(ceph::buffer::list::iterator&)
[  599s]    void decode(bufferlist::iterator &bl) {
[  599s]         ^~~~~~
[  599s] /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/osd/osd_types.h:843:8: note:   candidate expects 1 argument, 2 provided
[  599s] /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/osd/osd_types.h:851:8: note: candidate: void eversion_t::decode(ceph::bufferlist&)
[  599s]    void decode(bufferlist& bl) {
[  599s]         ^~~~~~
[  599s] /home/abuild/rpmbuild/BUILD/ceph-13.0.1-2078-g85df538001/src/osd/osd_types.h:851:8: note:   candidate expects 1 argument, 2 provided
[  605s] make[2]: *** [src/CMakeFiles/crush_objs.dir/build.make:159: src/CMakeFiles/crush_objs.dir/crush/CrushWrapper.cc.o] Error 1
[  605s] make[1]: *** [CMakeFiles/Makefile2:999: src/CMakeFiles/crush_objs.dir/all] Error 2
Actions #1

Updated by Nathan Cutler about 6 years ago

  • Status changed from New to In Progress
  • Assignee set to Nathan Cutler
Actions #2

Updated by Nathan Cutler about 6 years ago

Looks like the regression was introduced by https://github.com/ceph/ceph/commit/46de629c3d0

Testing a fix now.

Actions #3

Updated by Nathan Cutler about 6 years ago

  • Status changed from In Progress to Fix Under Review
Actions #4

Updated by Nathan Cutler about 6 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF